# DATA

./: README.md
Dang/: automove.sh
Dang/llvm/: CMakeLists.txt  NoDang.cpp  README.md
Dang/llvm/DangPointer/: CMakeLists.txt  READNE.md  config.txt  main.cpp
Dang/llvm/DangPointer/dangling-pointer/: DanglingPointer.cpp  DanglingPointer.h
Dang/llvm/DangPointer/framework/: ASTManager.cpp  BasicChecker.cpp  BasicChecker.h  CallGraph.h  Common.cpp  Config.cpp  Config.h  Logger.h
Dang/llvm/OD/: CMakeLists.txt  OD.cpp  autosum.sh  memorydetect.sh
Dang/llvm/src/: CMakeLists.txt  NoDang-newarch.cpp  NoDang.cpp  NoDang.h
Dang/test/: FP.c  NP.c  OD.c  README.md  allcases.c  allcases_back.c  cpptest.cpp  diffCases.bc  diffCases.c  diffCases.ll  diffCases_all.c  diffCases_back.c  funPointer.c  pointer.bc  pointer.c  pointer_back.bc  pointer_back.c  pointer_back.ll  pointer_null.c  test.sh
Dang/test/CVE/: config.txt
Dang/test/CVE/2003-0015/: CVSProber.java  MOLINT.POINTER.NULL.SET.xml  cvs_disablexprog.diff  server.c_2003-0015
Dang/test/CVE/2004-0416/: 392.c  MOLINT.POINTER.NULL.SET.xml  server.c_2004-0416
Dang/test/CVE/2007-1521N1522/: MOLINT.POINTER.NULL.SET.xml  session.c_2007-1521  session.c_2007-1522
Dang/test/CVE/2007-1711/: MOLINT.POINTER.NULL.SET.xml  session.c_2007-1711
Dang/test/CVE/2009-1415/: MOLINT.POINTER.NULL.SET.xml  pk-libgcrypt.c_2009-1415
Dang/test/CVE/2010-2939/: CA.cert  CA.key  MOLINT.POINTER.NULL.SET.xml  s3_clnt.c
Dang/test/CVE/2012-1663/: MOLINT.POINTER.NULL.SET.xml  gnutls_pcert.c_2012-1663  res.txt  ser.txt
Dang/test/CVE/2016-3141/: 2016-3141.php  MOLINT.POINTER.NULL.SET.xml  wddx.c_2016-3141
Dang/test/ODproject/: main.c  makefile  other.c  other.h  test.sh  tests
Dang/test/SPEC/: Coverity.xlsx  splint.xlsx
Dang/test/simpleproject/: main.c  makefile  other.c  testAST.sh  tests
Dang/test/simpleproject/tmp/: main.c  makefile  other.c  other.h  test.sh  tests
Dang/test/targetcases/: main.c  makefile  other.c  other.h  test.sh  tests
Dataset/: README.md
SA/: README.md
SA/Reports/: Lunchbox-threadPool.bc-bug.txt  README.md  RedAlert-RAServer-bugs.txt  axel.bc-bugs.txt  lwan.bc-bug.txt  rsyslog-imudp.so.bc-bug.txt  s3fs.bc-bug.txt  sofa-pbrpc-client.bc-bug.txt  transmission-2.92-bugs.txt  zfs-fuse-umem_test.bc-bug.txt  zfs-zfs.bc-bug.txt
SAT/: DLCNN.py  autoSatGen.sh  autoSolve.sh  load_data.py  utilities.py
SSD/: README.md
SSD/Experiment-and-Subjects/: README.md  config.txt
SSD/Experiment-and-Subjects/dynamic-result/dataRace/: 502.tar  dataRace-Ori.c  dataRace-magic.c
SSD/Experiment-and-Subjects/dynamic-result/dataRace/general/: Makefile  dataRace.c
SSD/Experiment-and-Subjects/dynamic-result/example/: example-magic.c  example-magic2.c  example-magic3.c  example-magic4.c  example-ori.c
SSD/Experiment-and-Subjects/dynamic-result/example/general/: Makefile  example.c
SSD/Experiment-and-Subjects/dynamic-result/linebox/: lineboxSymbol  race1-log  race3-log  race4-log
SSD/Experiment-and-Subjects/dynamic-result/power/: README  powerO0Symbol  powerSymbol  race1-O0-log  race1-log  race2-O0-log  race2-log
SSD/Experiment-and-Subjects/dynamic-result/short/: short-comp.c  short-ori.c  short.c  shortIE.c
SSD/Experiment-and-Subjects/moti-example/: GuideSrc.txt  GuidedPath.txt  example-lock.c
SSD/Experiment-and-Subjects/static-result/: README.md  autoIns.py  dataRace-Ori.res  example.res  gfjres.csv.bck  i2c-pca-isa-EI.res  linebox.res  mk712.res  mpu401_uart-EI.res  mv643xx_eth.res  pc110pad.res  power.res  res.csv  res.csv.bck  serial-u16550EI.res  short.res  shortIE.res  shortprintEI.res  shortprintUnEI.res  survey.py  warningManager.py
SSD/Experiment-and-Subjects/test-cases/: example.c  exampleSym.c  i2c-pca-isa-EI.c  magic-instruction.h  mpu401_uart-EI.c  serial-u16550EI.c  short.c  shortIE.c  shortprintEI.c  shortprintUnEI.c
SSD/SDRacer/Automatic-repair/: autofix.py  mergeRegion.py
SSD/SDRacer/Dynamic-Validation/: Info.py  analyse.py  autotest.py  autotest.sh  command.txt  conf.py  transdata.py
SSD/SDRacer/Dynamic-Validation/scripts/: Info.txt  analysePDR.py  gen-Info.py
SSD/SDRacer/Guided-Symbolic-Execution/klee/: CMakeLists.txt
SSD/SDRacer/Guided-Symbolic-Execution/klee-uclibc/: FILEPATH  README
SSD/SDRacer/Guided-Symbolic-Execution/klee-uclibc/libc/: Makefile.in
SSD/SDRacer/Guided-Symbolic-Execution/klee-uclibc/libc/linux/: Makefile.in  README  interrupt.c
SSD/SDRacer/Guided-Symbolic-Execution/klee/lib/Core/: Executor.cpp  GuideExecutionInfo.cpp  GuideExecutionInfo.h  Searcher.cpp  Searcher.h
SSD/SDRacer/Static-Analysis/: Makefile  README.md
SSD/SDRacer/Static-Analysis/SRacer/: CMakeLists.txt  README.md  config.txt  main.cpp
SSD/SDRacer/Static-Analysis/SRacer/data-race/: datarace.cpp  datarace.h
SSD/SDRacer/Static-Analysis/SRacer/framework/: ASTElement.h  ASTManager.cpp  ASTManager.h  BasicChecker.cpp  CMakeLists.txt  CallGraph.cpp  CallGraph.h  Common.cpp  Common.h  Config.h  Logger.cpp
SSD/SDRacer/Static-Analysis/scripts/: autoAnalyze.sh  autoHookTest.sh  autoMake.sh  autofilter.sh  autotest.sh  klee-gcc  klee-gcc-bc
