cmake_minimum_required(VERSION 3.5)
project(klee)

set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")

set(SOURCE_FILES
    autoconf/AutoRegen.sh
    autoconf/config.guess
    autoconf/config.sub
    autoconf/configure.ac
    autoconf/install-sh
    build/docs/doxygen.cfg
    build/include/klee/Config/CompileTimeInfo.h
    build/include/klee/Config/config.h
    build/lib/Basic/Release+Asserts/CmdLineOptions.d
    build/lib/Basic/Release+Asserts/CmdLineOptions.o
    build/lib/Basic/Release+Asserts/ConstructSolverChain.d
    build/lib/Basic/Release+Asserts/ConstructSolverChain.o
    build/lib/Basic/Release+Asserts/KTest.d
    build/lib/Basic/Release+Asserts/KTest.o
    build/lib/Basic/Release+Asserts/Statistics.d
    build/lib/Basic/Release+Asserts/Statistics.o
    build/lib/Basic/Makefile
    build/lib/Core/Release+Asserts/AddressSpace.d
    build/lib/Core/Release+Asserts/AddressSpace.o
    build/lib/Core/Release+Asserts/CallPathManager.d
    build/lib/Core/Release+Asserts/CallPathManager.o
    build/lib/Core/Release+Asserts/Context.d
    build/lib/Core/Release+Asserts/Context.o
    build/lib/Core/Release+Asserts/CoreStats.d
    build/lib/Core/Release+Asserts/CoreStats.o
    build/lib/Core/Release+Asserts/ExecutionState.d
    build/lib/Core/Release+Asserts/ExecutionState.o
    build/lib/Core/Release+Asserts/Executor.d
    build/lib/Core/Release+Asserts/Executor.o
    build/lib/Core/Release+Asserts/ExecutorTimers.d
    build/lib/Core/Release+Asserts/ExecutorTimers.o
    build/lib/Core/Release+Asserts/ExecutorUtil.d
    build/lib/Core/Release+Asserts/ExecutorUtil.o
    build/lib/Core/Release+Asserts/ExternalDispatcher.d
    build/lib/Core/Release+Asserts/ExternalDispatcher.o
    build/lib/Core/Release+Asserts/ImpliedValue.d
    build/lib/Core/Release+Asserts/ImpliedValue.o
    build/lib/Core/Release+Asserts/Memory.d
    build/lib/Core/Release+Asserts/Memory.o
    build/lib/Core/Release+Asserts/MemoryManager.d
    build/lib/Core/Release+Asserts/MemoryManager.o
    build/lib/Core/Release+Asserts/PTree.d
    build/lib/Core/Release+Asserts/PTree.o
    build/lib/Core/Release+Asserts/Searcher.d
    build/lib/Core/Release+Asserts/Searcher.o
    build/lib/Core/Release+Asserts/SeedInfo.d
    build/lib/Core/Release+Asserts/SeedInfo.o
    build/lib/Core/Release+Asserts/SpecialFunctionHandler.d
    build/lib/Core/Release+Asserts/SpecialFunctionHandler.o
    build/lib/Core/Release+Asserts/StatsTracker.d
    build/lib/Core/Release+Asserts/StatsTracker.o
    build/lib/Core/Release+Asserts/TimingSolver.d
    build/lib/Core/Release+Asserts/TimingSolver.o
    build/lib/Core/Release+Asserts/UserSearcher.d
    build/lib/Core/Release+Asserts/UserSearcher.o
    build/lib/Core/Makefile
    build/lib/Expr/Release+Asserts/ArrayCache.d
    build/lib/Expr/Release+Asserts/ArrayCache.o
    build/lib/Expr/Release+Asserts/Assigment.d
    build/lib/Expr/Release+Asserts/Assigment.o
    build/lib/Expr/Release+Asserts/Constraints.d
    build/lib/Expr/Release+Asserts/Constraints.o
    build/lib/Expr/Release+Asserts/Expr.d
    build/lib/Expr/Release+Asserts/Expr.o
    build/lib/Expr/Release+Asserts/ExprBuilder.d
    build/lib/Expr/Release+Asserts/ExprBuilder.o
    build/lib/Expr/Release+Asserts/ExprEvaluator.d
    build/lib/Expr/Release+Asserts/ExprEvaluator.o
    build/lib/Expr/Release+Asserts/ExprPPrinter.d
    build/lib/Expr/Release+Asserts/ExprPPrinter.o
    build/lib/Expr/Release+Asserts/ExprSMTLIBPrinter.d
    build/lib/Expr/Release+Asserts/ExprSMTLIBPrinter.o
    build/lib/Expr/Release+Asserts/ExprUtil.d
    build/lib/Expr/Release+Asserts/ExprUtil.o
    build/lib/Expr/Release+Asserts/ExprVisitor.d
    build/lib/Expr/Release+Asserts/ExprVisitor.o
    build/lib/Expr/Release+Asserts/Lexer.d
    build/lib/Expr/Release+Asserts/Lexer.o
    build/lib/Expr/Release+Asserts/Parser.d
    build/lib/Expr/Release+Asserts/Parser.o
    build/lib/Expr/Release+Asserts/Updates.d
    build/lib/Expr/Release+Asserts/Updates.o
    build/lib/Expr/Makefile
    build/lib/Module/Release+Asserts/Checks.d
    build/lib/Module/Release+Asserts/Checks.o
    build/lib/Module/Release+Asserts/InstructionInfoTable.d
    build/lib/Module/Release+Asserts/InstructionInfoTable.o
    build/lib/Module/Release+Asserts/IntrinsicCleaner.d
    build/lib/Module/Release+Asserts/IntrinsicCleaner.o
    build/lib/Module/Release+Asserts/KInstruction.d
    build/lib/Module/Release+Asserts/KInstruction.o
    build/lib/Module/Release+Asserts/KModule.d
    build/lib/Module/Release+Asserts/KModule.o
    build/lib/Module/Release+Asserts/LowerSwitch.d
    build/lib/Module/Release+Asserts/LowerSwitch.o
    build/lib/Module/Release+Asserts/ModuleUtil.d
    build/lib/Module/Release+Asserts/ModuleUtil.o
    build/lib/Module/Release+Asserts/Optimize.d
    build/lib/Module/Release+Asserts/Optimize.o
    build/lib/Module/Release+Asserts/PhiCleaner.d
    build/lib/Module/Release+Asserts/PhiCleaner.o
    build/lib/Module/Release+Asserts/RaiseAsm.d
    build/lib/Module/Release+Asserts/RaiseAsm.o
    build/lib/Module/Makefile
    build/lib/Solver/Release+Asserts/CachingSolver.d
    build/lib/Solver/Release+Asserts/CachingSolver.o
    build/lib/Solver/Release+Asserts/CexCachingSolver.d
    build/lib/Solver/Release+Asserts/CexCachingSolver.o
    build/lib/Solver/Release+Asserts/ConstantDivision.d
    build/lib/Solver/Release+Asserts/ConstantDivision.o
    build/lib/Solver/Release+Asserts/CoreSolver.d
    build/lib/Solver/Release+Asserts/CoreSolver.o
    build/lib/Solver/Release+Asserts/DummySolver.d
    build/lib/Solver/Release+Asserts/DummySolver.o
    build/lib/Solver/Release+Asserts/FastCexSolver.d
    build/lib/Solver/Release+Asserts/FastCexSolver.o
    build/lib/Solver/Release+Asserts/IncompleteSolver.d
    build/lib/Solver/Release+Asserts/IncompleteSolver.o
    build/lib/Solver/Release+Asserts/IndependentSolver.d
    build/lib/Solver/Release+Asserts/IndependentSolver.o
    build/lib/Solver/Release+Asserts/MetaSMTSolver.d
    build/lib/Solver/Release+Asserts/MetaSMTSolver.o
    build/lib/Solver/Release+Asserts/PCLoggingSolver.d
    build/lib/Solver/Release+Asserts/PCLoggingSolver.o
    build/lib/Solver/Release+Asserts/QueryLoggingSolver.d
    build/lib/Solver/Release+Asserts/QueryLoggingSolver.o
    build/lib/Solver/Release+Asserts/SMTLIBLoggingSolver.d
    build/lib/Solver/Release+Asserts/SMTLIBLoggingSolver.o
    build/lib/Solver/Release+Asserts/Solver.d
    build/lib/Solver/Release+Asserts/Solver.o
    build/lib/Solver/Release+Asserts/SolverImpl.d
    build/lib/Solver/Release+Asserts/SolverImpl.o
    build/lib/Solver/Release+Asserts/SolverStats.d
    build/lib/Solver/Release+Asserts/SolverStats.o
    build/lib/Solver/Release+Asserts/STPBuilder.d
    build/lib/Solver/Release+Asserts/STPBuilder.o
    build/lib/Solver/Release+Asserts/STPSolver.d
    build/lib/Solver/Release+Asserts/STPSolver.o
    build/lib/Solver/Release+Asserts/ValidatingSolver.d
    build/lib/Solver/Release+Asserts/ValidatingSolver.o
    build/lib/Solver/Release+Asserts/Z3Builder.d
    build/lib/Solver/Release+Asserts/Z3Builder.o
    build/lib/Solver/Release+Asserts/Z3Solver.d
    build/lib/Solver/Release+Asserts/Z3Solver.o
    build/lib/Solver/Makefile
    build/lib/Support/Release+Asserts/ErrorHandling.d
    build/lib/Support/Release+Asserts/ErrorHandling.o
    build/lib/Support/Release+Asserts/MemoryUsage.d
    build/lib/Support/Release+Asserts/MemoryUsage.o
    build/lib/Support/Release+Asserts/PrintVersion.d
    build/lib/Support/Release+Asserts/PrintVersion.o
    build/lib/Support/Release+Asserts/RNG.d
    build/lib/Support/Release+Asserts/RNG.o
    build/lib/Support/Release+Asserts/Time.d
    build/lib/Support/Release+Asserts/Time.o
    build/lib/Support/Release+Asserts/Timer.d
    build/lib/Support/Release+Asserts/Timer.o
    build/lib/Support/Release+Asserts/TreeStream.d
    build/lib/Support/Release+Asserts/TreeStream.o
    build/lib/Support/Makefile
    build/lib/Makefile
    build/Release+Asserts/bin/gen-random-bout
    build/Release+Asserts/bin/kleaver
    build/Release+Asserts/bin/klee
    build/Release+Asserts/bin/klee-replay
    build/Release+Asserts/bin/klee-stats
    build/Release+Asserts/bin/ktest-tool
    build/Release+Asserts/lib/klee-libc.bc
    build/Release+Asserts/lib/klee-uclibc.bca
    build/Release+Asserts/lib/kleeRuntimeIntrinsic.bc
    build/Release+Asserts/lib/libkleaverExpr.a
    build/Release+Asserts/lib/libkleaverSolver.a
    build/Release+Asserts/lib/libkleeBasic.a
    build/Release+Asserts/lib/libkleeCore.a
    build/Release+Asserts/lib/libkleeModule.a
    build/Release+Asserts/lib/libkleeRuntest.a
    build/Release+Asserts/lib/libkleeRuntest.so
    build/Release+Asserts/lib/libkleeRuntimePOSIX.bca
    build/Release+Asserts/lib/libkleeSupport.a
    build/runtime/Intrinsic/Release+Asserts/klee_div_zero_check.bc
    build/runtime/Intrinsic/Release+Asserts/klee_div_zero_check.bc.d
    build/runtime/Intrinsic/Release+Asserts/klee_div_zero_check.ll
    build/runtime/Intrinsic/Release+Asserts/klee_int.bc
    build/runtime/Intrinsic/Release+Asserts/klee_int.bc.d
    build/runtime/Intrinsic/Release+Asserts/klee_int.ll
    build/runtime/Intrinsic/Release+Asserts/klee_overshift_check.bc
    build/runtime/Intrinsic/Release+Asserts/klee_overshift_check.bc.d
    build/runtime/Intrinsic/Release+Asserts/klee_overshift_check.ll
    build/runtime/Intrinsic/Release+Asserts/klee_range.bc
    build/runtime/Intrinsic/Release+Asserts/klee_range.bc.d
    build/runtime/Intrinsic/Release+Asserts/klee_range.ll
    build/runtime/Intrinsic/Release+Asserts/memcpy.bc
    build/runtime/Intrinsic/Release+Asserts/memcpy.bc.d
    build/runtime/Intrinsic/Release+Asserts/memcpy.ll
    build/runtime/Intrinsic/Release+Asserts/memmove.bc
    build/runtime/Intrinsic/Release+Asserts/memmove.bc.d
    build/runtime/Intrinsic/Release+Asserts/memmove.ll
    build/runtime/Intrinsic/Release+Asserts/mempcpy.bc
    build/runtime/Intrinsic/Release+Asserts/mempcpy.bc.d
    build/runtime/Intrinsic/Release+Asserts/mempcpy.ll
    build/runtime/Intrinsic/Release+Asserts/memset.bc
    build/runtime/Intrinsic/Release+Asserts/memset.bc.d
    build/runtime/Intrinsic/Release+Asserts/memset.ll
    build/runtime/Intrinsic/Makefile
    build/runtime/klee-libc/Release+Asserts/__cxa_atexit.bc
    build/runtime/klee-libc/Release+Asserts/__cxa_atexit.bc.d
    build/runtime/klee-libc/Release+Asserts/__cxa_atexit.ll
    build/runtime/klee-libc/Release+Asserts/abort.bc
    build/runtime/klee-libc/Release+Asserts/abort.bc.d
    build/runtime/klee-libc/Release+Asserts/abort.ll
    build/runtime/klee-libc/Release+Asserts/atexit.bc
    build/runtime/klee-libc/Release+Asserts/atexit.bc.d
    build/runtime/klee-libc/Release+Asserts/atexit.ll
    build/runtime/klee-libc/Release+Asserts/atoi.bc
    build/runtime/klee-libc/Release+Asserts/atoi.bc.d
    build/runtime/klee-libc/Release+Asserts/atoi.ll
    build/runtime/klee-libc/Release+Asserts/calloc.bc
    build/runtime/klee-libc/Release+Asserts/calloc.bc.d
    build/runtime/klee-libc/Release+Asserts/calloc.ll
    build/runtime/klee-libc/Release+Asserts/htonl.bc
    build/runtime/klee-libc/Release+Asserts/htonl.bc.d
    build/runtime/klee-libc/Release+Asserts/htonl.ll
    build/runtime/klee-libc/Release+Asserts/klee-choose.bc
    build/runtime/klee-libc/Release+Asserts/klee-choose.bc.d
    build/runtime/klee-libc/Release+Asserts/klee-choose.ll
    build/runtime/klee-libc/Release+Asserts/memchr.bc
    build/runtime/klee-libc/Release+Asserts/memchr.bc.d
    build/runtime/klee-libc/Release+Asserts/memchr.ll
    build/runtime/klee-libc/Release+Asserts/memcmp.bc
    build/runtime/klee-libc/Release+Asserts/memcmp.bc.d
    build/runtime/klee-libc/Release+Asserts/memcmp.ll
    build/runtime/klee-libc/Release+Asserts/memcpy.bc
    build/runtime/klee-libc/Release+Asserts/memcpy.bc.d
    build/runtime/klee-libc/Release+Asserts/memcpy.ll
    build/runtime/klee-libc/Release+Asserts/memmove.bc
    build/runtime/klee-libc/Release+Asserts/memmove.bc.d
    build/runtime/klee-libc/Release+Asserts/memmove.ll
    build/runtime/klee-libc/Release+Asserts/mempcpy.bc
    build/runtime/klee-libc/Release+Asserts/mempcpy.bc.d
    build/runtime/klee-libc/Release+Asserts/mempcpy.ll
    build/runtime/klee-libc/Release+Asserts/memset.bc
    build/runtime/klee-libc/Release+Asserts/memset.bc.d
    build/runtime/klee-libc/Release+Asserts/memset.ll
    build/runtime/klee-libc/Release+Asserts/putchar.bc
    build/runtime/klee-libc/Release+Asserts/putchar.bc.d
    build/runtime/klee-libc/Release+Asserts/putchar.ll
    build/runtime/klee-libc/Release+Asserts/stpcpy.bc
    build/runtime/klee-libc/Release+Asserts/stpcpy.bc.d
    build/runtime/klee-libc/Release+Asserts/stpcpy.ll
    build/runtime/klee-libc/Release+Asserts/strcat.bc
    build/runtime/klee-libc/Release+Asserts/strcat.bc.d
    build/runtime/klee-libc/Release+Asserts/strcat.ll
    build/runtime/klee-libc/Release+Asserts/strchr.bc
    build/runtime/klee-libc/Release+Asserts/strchr.bc.d
    build/runtime/klee-libc/Release+Asserts/strchr.ll
    build/runtime/klee-libc/Release+Asserts/strcmp.bc
    build/runtime/klee-libc/Release+Asserts/strcmp.bc.d
    build/runtime/klee-libc/Release+Asserts/strcmp.ll
    build/runtime/klee-libc/Release+Asserts/strcoll.bc
    build/runtime/klee-libc/Release+Asserts/strcoll.bc.d
    build/runtime/klee-libc/Release+Asserts/strcoll.ll
    build/runtime/klee-libc/Release+Asserts/strcpy.bc
    build/runtime/klee-libc/Release+Asserts/strcpy.bc.d
    build/runtime/klee-libc/Release+Asserts/strcpy.ll
    build/runtime/klee-libc/Release+Asserts/strlen.bc
    build/runtime/klee-libc/Release+Asserts/strlen.bc.d
    build/runtime/klee-libc/Release+Asserts/strlen.ll
    build/runtime/klee-libc/Release+Asserts/strncmp.bc
    build/runtime/klee-libc/Release+Asserts/strncmp.bc.d
    build/runtime/klee-libc/Release+Asserts/strncmp.ll
    build/runtime/klee-libc/Release+Asserts/strncpy.bc
    build/runtime/klee-libc/Release+Asserts/strncpy.bc.d
    build/runtime/klee-libc/Release+Asserts/strncpy.ll
    build/runtime/klee-libc/Release+Asserts/strrchr.bc
    build/runtime/klee-libc/Release+Asserts/strrchr.bc.d
    build/runtime/klee-libc/Release+Asserts/strrchr.ll
    build/runtime/klee-libc/Release+Asserts/strtol.bc
    build/runtime/klee-libc/Release+Asserts/strtol.bc.d
    build/runtime/klee-libc/Release+Asserts/strtol.ll
    build/runtime/klee-libc/Release+Asserts/strtoul.bc
    build/runtime/klee-libc/Release+Asserts/strtoul.bc.d
    build/runtime/klee-libc/Release+Asserts/strtoul.ll
    build/runtime/klee-libc/Release+Asserts/tolower.bc
    build/runtime/klee-libc/Release+Asserts/tolower.bc.d
    build/runtime/klee-libc/Release+Asserts/tolower.ll
    build/runtime/klee-libc/Release+Asserts/toupper.bc
    build/runtime/klee-libc/Release+Asserts/toupper.bc.d
    build/runtime/klee-libc/Release+Asserts/toupper.ll
    build/runtime/klee-libc/Makefile
    build/runtime/klee-uclibc/Makefile
    build/runtime/POSIX/Release+Asserts/fd.bc
    build/runtime/POSIX/Release+Asserts/fd.bc.d
    build/runtime/POSIX/Release+Asserts/fd.ll
    build/runtime/POSIX/Release+Asserts/fd_32.bc
    build/runtime/POSIX/Release+Asserts/fd_32.bc.d
    build/runtime/POSIX/Release+Asserts/fd_32.ll
    build/runtime/POSIX/Release+Asserts/fd_64.bc
    build/runtime/POSIX/Release+Asserts/fd_64.bc.d
    build/runtime/POSIX/Release+Asserts/fd_64.ll
    build/runtime/POSIX/Release+Asserts/fd_init.bc
    build/runtime/POSIX/Release+Asserts/fd_init.bc.d
    build/runtime/POSIX/Release+Asserts/fd_init.ll
    build/runtime/POSIX/Release+Asserts/illegal.bc
    build/runtime/POSIX/Release+Asserts/illegal.bc.d
    build/runtime/POSIX/Release+Asserts/illegal.ll
    build/runtime/POSIX/Release+Asserts/klee_init_env.bc
    build/runtime/POSIX/Release+Asserts/klee_init_env.bc.d
    build/runtime/POSIX/Release+Asserts/klee_init_env.ll
    build/runtime/POSIX/Release+Asserts/misc.bc
    build/runtime/POSIX/Release+Asserts/misc.bc.d
    build/runtime/POSIX/Release+Asserts/misc.ll
    build/runtime/POSIX/Release+Asserts/selinux.bc
    build/runtime/POSIX/Release+Asserts/selinux.bc.d
    build/runtime/POSIX/Release+Asserts/selinux.ll
    build/runtime/POSIX/Release+Asserts/stubs.bc
    build/runtime/POSIX/Release+Asserts/stubs.bc.d
    build/runtime/POSIX/Release+Asserts/stubs.ll
    build/runtime/POSIX/Makefile
    build/runtime/Runtest/Release+Asserts/intrinsics.d
    build/runtime/Runtest/Release+Asserts/intrinsics.o
    build/runtime/Runtest/Makefile
    build/runtime/Makefile
    build/test/Concrete/Makefile
    build/test/Makefile
    build/test/Makefile.tests
    build/tools/gen-random-bout/Release+Asserts/gen-random-bout.d
    build/tools/gen-random-bout/Release+Asserts/gen-random-bout.o
    build/tools/gen-random-bout/Makefile
    build/tools/kleaver/Release+Asserts/main.d
    build/tools/kleaver/Release+Asserts/main.o
    build/tools/kleaver/Makefile
    build/tools/klee/Release+Asserts/Debug.d
    build/tools/klee/Release+Asserts/Debug.o
    build/tools/klee/Release+Asserts/main.d
    build/tools/klee/Release+Asserts/main.o
    build/tools/klee/Makefile
    build/tools/klee-replay/Release+Asserts/fd_init.d
    build/tools/klee-replay/Release+Asserts/fd_init.o
    build/tools/klee-replay/Release+Asserts/file-creator.d
    build/tools/klee-replay/Release+Asserts/file-creator.o
    build/tools/klee-replay/Release+Asserts/klee-replay.d
    build/tools/klee-replay/Release+Asserts/klee-replay.o
    build/tools/klee-replay/Release+Asserts/klee_init_env.d
    build/tools/klee-replay/Release+Asserts/klee_init_env.o
    build/tools/klee-replay/Makefile
    build/tools/klee-stats/Makefile
    build/tools/ktest-tool/Makefile
    build/tools/Makefile
    build/unittests/Makefile
    build/config.log
    build/config.status
    build/Makefile
    build/Makefile.common
    build/Makefile.config
    docs/SMT-COMP/BitVector_ArraysEx.smt
    docs/SMT-COMP/BitVectors.smt
    docs/SMT-COMP/QF_AUFBV.smt
    docs/SMT-COMP/QF_BV.smt
    docs/doxygen.cfg.in
    docs/intro
    docs/overview
    examples/get_sign/get_sign.c
    examples/islower/islower.c
    examples/regexp/notes.txt
    examples/regexp/Regexp.c
    examples/sort/sort.c
    include/expr/Lexer.h
    include/expr/Parser.h
    include/klee/Config/config.h.in
    include/klee/Config/Version.h
    include/klee/Internal/ADT/DiscretePDF.h
    include/klee/Internal/ADT/DiscretePDF.inc
    include/klee/Internal/ADT/ImmutableMap.h
    include/klee/Internal/ADT/ImmutableSet.h
    include/klee/Internal/ADT/ImmutableTree.h
    include/klee/Internal/ADT/KTest.h
    include/klee/Internal/ADT/MapOfSets.h
    include/klee/Internal/ADT/RNG.h
    include/klee/Internal/ADT/TreeStream.h
    include/klee/Internal/Module/Cell.h
    include/klee/Internal/Module/InstructionInfoTable.h
    include/klee/Internal/Module/KInstIterator.h
    include/klee/Internal/Module/KInstruction.h
    include/klee/Internal/Module/KModule.h
    include/klee/Internal/Support/Debug.h
    include/klee/Internal/Support/ErrorHandling.h
    include/klee/Internal/Support/FloatEvaluation.h
    include/klee/Internal/Support/IntEvaluation.h
    include/klee/Internal/Support/ModuleUtil.h
    include/klee/Internal/Support/PrintVersion.h
    include/klee/Internal/Support/QueryLog.h
    include/klee/Internal/Support/Timer.h
    include/klee/Internal/System/MemoryUsage.h
    include/klee/Internal/System/Time.h
    include/klee/Internal/README.txt
    include/klee/util/ArrayCache.h
    include/klee/util/ArrayExprHash.h
    include/klee/util/Assignment.h
    include/klee/util/BitArray.h
    include/klee/util/Bits.h
    include/klee/util/ExprEvaluator.h
    include/klee/util/ExprHashMap.h
    include/klee/util/ExprPPrinter.h
    include/klee/util/ExprRangeEvaluator.h
    include/klee/util/ExprSMTLIBPrinter.h
    include/klee/util/ExprUtil.h
    include/klee/util/ExprVisitor.h
    include/klee/util/GetElementPtrTypeIterator.h
    include/klee/util/PrintContext.h
    include/klee/util/Ref.h
    include/klee/CommandLine.h
    include/klee/Common.h
    include/klee/Constraints.h
    include/klee/ExecutionState.h
    include/klee/Expr.h
    include/klee/ExprBuilder.h
    include/klee/IncompleteSolver.h
    include/klee/Interpreter.h
    include/klee/klee.h
    include/klee/Solver.h
    include/klee/SolverImpl.h
    include/klee/SolverStats.h
    include/klee/Statistic.h
    include/klee/Statistics.h
    include/klee/TimerStatIncrementer.h
    lib/Basic/CmdLineOptions.cpp
    lib/Basic/ConstructSolverChain.cpp
    lib/Basic/KTest.cpp
    lib/Basic/Makefile
    lib/Basic/README.txt
    lib/Basic/Statistics.cpp
    lib/Core/AddressSpace.cpp
    lib/Core/AddressSpace.h
    lib/Core/CallPathManager.cpp
    lib/Core/CallPathManager.h
    lib/Core/Context.cpp
    lib/Core/Context.h
    lib/Core/CoreStats.cpp
    lib/Core/CoreStats.h
    lib/Core/ExecutionState.cpp
    lib/Core/Executor.cpp
    lib/Core/Executor.h
    lib/Core/ExecutorTimerInfo.h
    lib/Core/ExecutorTimers.cpp
    lib/Core/ExecutorUtil.cpp
    lib/Core/ExternalDispatcher.cpp
    lib/Core/ExternalDispatcher.h
    lib/Core/ImpliedValue.cpp
    lib/Core/ImpliedValue.h
    lib/Core/Makefile
    lib/Core/Memory.cpp
    lib/Core/Memory.h
    lib/Core/MemoryManager.cpp
    lib/Core/MemoryManager.h
    lib/Core/ObjectHolder.h
    lib/Core/PTree.cpp
    lib/Core/PTree.h
    lib/Core/Searcher.cpp
    lib/Core/Searcher.h
    lib/Core/SeedInfo.cpp
    lib/Core/SeedInfo.h
    lib/Core/SpecialFunctionHandler.cpp
    lib/Core/SpecialFunctionHandler.h
    lib/Core/StatsTracker.cpp
    lib/Core/StatsTracker.h
    lib/Core/TimingSolver.cpp
    lib/Core/TimingSolver.h
    lib/Core/UserSearcher.cpp
    lib/Core/UserSearcher.h
    lib/Expr/ArrayCache.cpp
    lib/Expr/Assigment.cpp
    lib/Expr/Constraints.cpp
    lib/Expr/Expr.cpp
    lib/Expr/ExprBuilder.cpp
    lib/Expr/ExprEvaluator.cpp
    lib/Expr/ExprPPrinter.cpp
    lib/Expr/ExprSMTLIBPrinter.cpp
    lib/Expr/ExprUtil.cpp
    lib/Expr/ExprVisitor.cpp
    lib/Expr/Lexer.cpp
    lib/Expr/Makefile
    lib/Expr/Parser.cpp
    lib/Expr/Updates.cpp
    lib/Module/Checks.cpp
    lib/Module/InstructionInfoTable.cpp
    lib/Module/IntrinsicCleaner.cpp
    lib/Module/KInstruction.cpp
    lib/Module/KModule.cpp
    lib/Module/LowerSwitch.cpp
    lib/Module/Makefile
    lib/Module/ModuleUtil.cpp
    lib/Module/Optimize.cpp
    lib/Module/Passes.h
    lib/Module/PhiCleaner.cpp
    lib/Module/RaiseAsm.cpp
    lib/SMT/LICENSE.CVC3
    lib/SMT/main.cpp
    lib/SMT/Makefile
    lib/SMT/smtlib.lex
    lib/SMT/smtlib.y
    lib/SMT/SMTParser.cpp
    lib/SMT/SMTParser.h
    lib/Solver/CachingSolver.cpp
    lib/Solver/CexCachingSolver.cpp
    lib/Solver/ConstantDivision.cpp
    lib/Solver/ConstantDivision.h
    lib/Solver/CoreSolver.cpp
    lib/Solver/DummySolver.cpp
    lib/Solver/FastCexSolver.cpp
    lib/Solver/IncompleteSolver.cpp
    lib/Solver/IndependentSolver.cpp
    lib/Solver/Makefile
    lib/Solver/MetaSMTBuilder.h
    lib/Solver/MetaSMTSolver.cpp
    lib/Solver/PCLoggingSolver.cpp
    lib/Solver/QueryLoggingSolver.cpp
    lib/Solver/QueryLoggingSolver.h
    lib/Solver/SMTLIBLoggingSolver.cpp
    lib/Solver/Solver.cpp
    lib/Solver/SolverImpl.cpp
    lib/Solver/SolverStats.cpp
    lib/Solver/STPBuilder.cpp
    lib/Solver/STPBuilder.h
    lib/Solver/STPSolver.cpp
    lib/Solver/ValidatingSolver.cpp
    lib/Solver/Z3Builder.cpp
    lib/Solver/Z3Builder.h
    lib/Solver/Z3Solver.cpp
    lib/Support/ErrorHandling.cpp
    lib/Support/Makefile
    lib/Support/MemoryUsage.cpp
    lib/Support/PrintVersion.cpp
    lib/Support/README.txt
    lib/Support/RNG.cpp
    lib/Support/Time.cpp
    lib/Support/Timer.cpp
    lib/Support/TreeStream.cpp
    lib/Makefile
    lib/README.txt
    runtime/Intrinsic/klee_div_zero_check.c
    runtime/Intrinsic/klee_int.c
    runtime/Intrinsic/klee_overshift_check.c
    runtime/Intrinsic/klee_range.c
    runtime/Intrinsic/Makefile
    runtime/Intrinsic/memcpy.c
    runtime/Intrinsic/memmove.c
    runtime/Intrinsic/mempcpy.c
    runtime/Intrinsic/memset.c
    runtime/klee-libc/__cxa_atexit.c
    runtime/klee-libc/abort.c
    runtime/klee-libc/atexit.c
    runtime/klee-libc/atoi.c
    runtime/klee-libc/calloc.c
    runtime/klee-libc/htonl.c
    runtime/klee-libc/klee-choose.c
    runtime/klee-libc/Makefile
    runtime/klee-libc/memchr.c
    runtime/klee-libc/memcmp.c
    runtime/klee-libc/memcpy.c
    runtime/klee-libc/memmove.c
    runtime/klee-libc/mempcpy.c
    runtime/klee-libc/memset.c
    runtime/klee-libc/putchar.c
    runtime/klee-libc/stpcpy.c
    runtime/klee-libc/strcat.c
    runtime/klee-libc/strchr.c
    runtime/klee-libc/strcmp.c
    runtime/klee-libc/strcoll.c
    runtime/klee-libc/strcpy.c
    runtime/klee-libc/strlen.c
    runtime/klee-libc/strncmp.c
    runtime/klee-libc/strncpy.c
    runtime/klee-libc/strrchr.c
    runtime/klee-libc/strtol.c
    runtime/klee-libc/strtoul.c
    runtime/klee-libc/tolower.c
    runtime/klee-libc/toupper.c
    runtime/klee-uclibc/Makefile
    runtime/POSIX/fd.c
    runtime/POSIX/fd.h
    runtime/POSIX/fd_32.c
    runtime/POSIX/fd_64.c
    runtime/POSIX/fd_init.c
    runtime/POSIX/illegal.c
    runtime/POSIX/klee_init_env.c
    runtime/POSIX/Makefile
    runtime/POSIX/misc.c
    runtime/POSIX/selinux.c
    runtime/POSIX/stubs.c
    runtime/Runtest/intrinsics.c
    runtime/Runtest/Makefile
    runtime/Makefile
    scripts/coverageServer.py
    scripts/genTempFiles.sh
    scripts/IStatsMerge.py
    scripts/IStatsSum.py
    scripts/klee-chroot-env
    scripts/klee-clang
    scripts/klee-control
    scripts/klee-gcc
    scripts/objdump
    test/Concrete/_testingUtils.c
    test/Concrete/ackermann.c
    test/Concrete/arith_test.ll
    test/Concrete/BitwiseOps.ll
    test/Concrete/BoolReadWrite.ll
    test/Concrete/Casts.ll
    test/Concrete/CmpEq.ll
    test/Concrete/ConcreteTest.py
    test/Concrete/ConstantExpr.ll
    test/Concrete/FloatingPointOps.ll
    test/Concrete/GlobalInitializers.ll
    test/Concrete/GlobalUndef.ll
    test/Concrete/GlobalVariable.ll
    test/Concrete/ICmp.ll
    test/Concrete/Makefile
    test/Concrete/OneCall.ll
    test/Concrete/OverlappingPhiNodes.ll
    test/Concrete/README.txt
    test/Concrete/Select.ll
    test/Concrete/Shifts.ll
    test/Concrete/SimpleStoreAndLoad.ll
    test/Concrete/UnconditionalBranch.ll
    test/Concrete/UnconditionalBranchWithSimplePhi.ll
    test/Concrete/UnorderedPhiNodes.ll
    test/Coverage/ReadArgs.c
    test/Coverage/ReplayOutDir.c
    test/CXX/ArrayNew.cpp
    test/CXX/New.cpp
    test/CXX/SimpleVirtual.cpp
    test/CXX/StaticConstructor.cpp
    test/CXX/StaticDestructor.cpp
    test/CXX/Trivial.cpp
    test/Dogfood/ImmutableSet.cpp
    test/Expr/Lexer/Numbers.pc
    test/Expr/Parser/Concat64.pc
    test/Expr/Parser/ConstantFolding.pc
    test/Expr/Parser/Exprs.pc
    test/Expr/Parser/MultiByteReads.pc
    test/Expr/Parser/Simplify.pc
    test/Expr/Parser/TypeChecking.pc
    test/Expr/Evaluate.pc
    test/Expr/Evaluate2.pc
    test/Expr/print-smt-let.pc
    test/Expr/print-smt-let.smt2.good
    test/Expr/print-smt-named.pc
    test/Expr/print-smt-named.smt2.good
    test/Expr/print-smt-none.pc
    test/Expr/print-smt-none.smt2.good
    test/Feature/_utils._ll
    test/Feature/Alias.c
    test/Feature/AliasFunction.c
    test/Feature/AliasFunctionExit.c
    test/Feature/arithmetic-right-overshift-sym-conc.c
    test/Feature/BitcastAlias.ll
    test/Feature/BitcastAliasMD2U.ll
    test/Feature/ByteSwap.c
    test/Feature/CallToUndefinedExternal.cpp
    test/Feature/CheckForImpliedValue.c.failing
    test/Feature/CheckMemoryAccess.c
    test/Feature/consecutive_divide_by_zero.c
    test/Feature/const_array_opt1.c
    test/Feature/ConstantStruct.ll
    test/Feature/CopyOnWrite.c
    test/Feature/DanglingConcreteReadExpr.c
    test/Feature/DefineFixedObject.c
    test/Feature/DoubleFree.c
    test/Feature/DumpStatesOnHalt.c
    test/Feature/EntryPoint.c
    test/Feature/Envp.c
    test/Feature/ExprLogging.c
    test/Feature/ExternalWeakLinkage.c
    test/Feature/Float.c
    test/Feature/FloatingPt.c
    test/Feature/FunctionPointer.c
    test/Feature/GetElementPtr.ll
    test/Feature/GetValue.c
    test/Feature/ImpliedValue.c.failing
    test/Feature/InAndOutOfBounds.c
    test/Feature/IndirectCallToBuiltin.c
    test/Feature/IndirectCallToExternal.c
    test/Feature/InsertExtractValue.ll
    test/Feature/IntrinsicTrap.ll
    test/Feature/InvalidBitfieldAccess.c.failing
    test/Feature/IsSymbolic.c
    test/Feature/KleeReportError.c
    test/Feature/LargeReturnTypes.cpp
    test/Feature/left-overshift-sym-conc.c
    test/Feature/LinkLLVMLib.c
    test/Feature/logical-right-overshift-sym-conc.c
    test/Feature/LongDouble.cpp
    test/Feature/LongDoubleSupport.c
    test/Feature/LowerSwitch.c
    test/Feature/MakeConcreteSymbolic.c
    test/Feature/MakeSymbolicName.c
    test/Feature/MemoryLimit.c
    test/Feature/MultiMkSym.c
    test/Feature/MultipleFreeResolution.c
    test/Feature/MultipleReadResolution.c
    test/Feature/MultipleReallocResolution.c
    test/Feature/MultipleWriteResolution.c
    test/Feature/NamedSeedMatching.c
    test/Feature/OneFreeError.c
    test/Feature/OneOutOfBounds.c
    test/Feature/Optimize.c
    test/Feature/Overflow.ll
    test/Feature/OverflowMul.ll
    test/Feature/OverlappedError.c
    test/Feature/OvershiftCheck.c
    test/Feature/PreferCex.c
    test/Feature/RaiseAsm.c
    test/Feature/Realloc.c
    test/Feature/ReplayPath.c
    test/Feature/RewriteEqualities.c
    test/Feature/Searchers.c
    test/Feature/SetForking.c
    test/Feature/SilentKleeAssume.c
    test/Feature/SolverTimeout.c
    test/Feature/SourceMapping.c
    test/Feature/srem.c
    test/Feature/StatesCoveringNew.c
    test/Feature/ubsan_signed_overflow.c
    test/Feature/ubsan_unsigned_overflow.c
    test/Feature/utils.h
    test/Feature/Vararg.c
    test/Feature/VarArgLongDouble.c
    test/Feature/WithLibc.c
    test/Feature/WriteCov.c
    test/Intrinsics/objectsize.ll
    test/Intrinsics/objectsize.llvm29.ll
    test/Programs/pcregrep.c
    test/regression/2007-07-25-invalid-stp-array-binding-to-objectstate.c
    test/regression/2007-07-30-unflushed-byte.c
    test/regression/2007-08-01-bool-zext-in-call.ll
    test/regression/2007-08-01-cache-unclear-on-overwrite-flushed.c
    test/regression/2007-08-06-64bit-shift.c
    test/regression/2007-08-06-access-after-free.c
    test/regression/2007-08-08-free-zero.c
    test/regression/2007-08-16-invalid-constant-value.c
    test/regression/2007-08-16-valid-write-to-freed-object.c
    test/regression/2007-10-11-free-of-alloca.c
    test/regression/2007-10-11-illegal-access-after-free-and-branch.c
    test/regression/2007-10-12-failed-make-symbolic-after-copy.c
    test/regression/2008-03-04-free-of-global.c
    test/regression/2008-03-11-free-of-malloc-zero.c
    test/regression/2008-04-10-bad-alloca-free.c
    test/regression/2008-05-23-gep-with-global-const.c
    test/regression/2012-05-13-asm-causes-aborts.c
    test/regression/2014-07-04-unflushed-error-report.c
    test/regression/2014-12-08-ashr.c
    test/regression/2015-06-22-struct-write.c
    test/regression/2015-08-30-empty-constraints.c
    test/regression/2015-08-30-sdiv-1.c
    test/Runtime/POSIX/SELinux/lit.local.cfg
    test/Runtime/POSIX/SELinux/SELinux.c
    test/Runtime/POSIX/DirConsistency.c
    test/Runtime/POSIX/DirSeek.c
    test/Runtime/POSIX/Fcntl.c
    test/Runtime/POSIX/FD_Fail.c
    test/Runtime/POSIX/FD_Fail2.c
    test/Runtime/POSIX/FDNumbers.c
    test/Runtime/POSIX/FilePerm.c
    test/Runtime/POSIX/FreeArgv.c
    test/Runtime/POSIX/Futimesat.c
    test/Runtime/POSIX/Getenv.c
    test/Runtime/POSIX/Ioctl.c
    test/Runtime/POSIX/Isatty.c
    test/Runtime/POSIX/lit.local.cfg
    test/Runtime/POSIX/Openat.c
    test/Runtime/POSIX/PrgName.c
    test/Runtime/POSIX/Read1.c
    test/Runtime/POSIX/SeedAndFail.c
    test/Runtime/POSIX/Stdin.c
    test/Runtime/POSIX/Write1.c
    test/Runtime/POSIX/Write2.c
    test/Runtime/Uclibc/2007-10-08-optimization-calls-wrong-libc-functions.c
    test/Runtime/Uclibc/2008-03-04-libc-atexit-uses-dso-handle.c
    test/Runtime/Uclibc/Environ.c
    test/Runtime/Uclibc/lit.local.cfg
    test/Solver/AShr_to_smtlib.kquery
    test/Solver/AShr_to_smtlib.kquery.good.smt2
    test/Solver/FastCexSolver.pc
    test/Solver/LargeIntegers.pc
    test/Solver/lit.local.cfg
    test/Solver/overshift-aright-by-constant.kquery
    test/Solver/overshift-aright-by-symbolic.kquery
    test/Solver/overshift-left-by-constant.kquery
    test/Solver/overshift-left-by-symbolic.kquery
    test/Solver/overshift-lright-by-constant.kquery
    test/Solver/overshift-lright-by-symbolic.kquery
    test/lit.cfg
    test/lit.site.cfg.in
    test/Makefile
    test/Makefile.tests
    test/README
    test/TestRunner.sh
    tools/gen-random-bout/gen-random-bout.cpp
    tools/gen-random-bout/Makefile
    tools/kleaver/main.cpp
    tools/kleaver/Makefile
    tools/klee/Debug.cpp
    tools/klee/main.cpp
    tools/klee/Makefile
    tools/klee-replay/fd_init.c
    tools/klee-replay/file-creator.c
    tools/klee-replay/klee-replay.c
    tools/klee-replay/klee-replay.h
    tools/klee-replay/klee_init_env.c
    tools/klee-replay/Makefile
    tools/klee-stats/klee-stats
    tools/klee-stats/Makefile
    tools/ktest-tool/ktest-tool
    tools/ktest-tool/Makefile
    tools/Makefile
    unittests/Expr/ExprTest.cpp
    unittests/Expr/Makefile
    unittests/Ref/Makefile
    unittests/Ref/RefTest.cpp
    unittests/Solver/Makefile
    unittests/Solver/SolverTest.cpp
    unittests/Makefile
    unittests/TestMain.cpp
    utils/data/Queries/pcresymperf-3.pc
    utils/data/Queries/pcresymperf-4.pc
    utils/emacs/klee-pc-mode.el
    utils/hacks/TreeGraphs/Graphics/Canvas/__init__.py
    utils/hacks/TreeGraphs/Graphics/Geometry/__init__.py
    utils/hacks/TreeGraphs/Graphics/Geometry/Intersect2D.py
    utils/hacks/TreeGraphs/Graphics/Geometry/mat2.py
    utils/hacks/TreeGraphs/Graphics/Geometry/mat3.py
    utils/hacks/TreeGraphs/Graphics/Geometry/mat4.py
    utils/hacks/TreeGraphs/Graphics/Geometry/quat.py
    utils/hacks/TreeGraphs/Graphics/Geometry/vec2.py
    utils/hacks/TreeGraphs/Graphics/Geometry/vec3.py
    utils/hacks/TreeGraphs/Graphics/Geometry/vec4.py
    utils/hacks/TreeGraphs/Graphics/__init__.py
    utils/hacks/TreeGraphs/inputs/symPaths.ts
    utils/hacks/TreeGraphs/inputs/symPaths6.ts
    utils/hacks/TreeGraphs/Animate.py
    utils/hacks/TreeGraphs/DumpTreeStream.py
    utils/hacks/TreeGraphs/README.txt
    utils/hacks/TreeGraphs/TreeGraph.py
    utils/sanitizers/lsan.txt
    utils/valgrind/README.txt
    utils/valgrind/valgrind-llvm.supp
    utils/valgrind/valgrind-stp.supp
    configure
    Dockerfile
    LICENSE.TXT
    Makefile
    Makefile.common
    Makefile.config.in
    Makefile.rules
    MetaSMT.mk
    NEWS
    README.md
    TODO.txt)

add_executable(klee ${SOURCE_FILES})